# WebAssemblyStudio

./: .gitattributes  .gitignore  .gitignore.travis  .prettierrc.json  .travis.yml  C++  CNAME  LICENSE  README.md  beta.sh  config.json  deploy.txt  embed.html  index.html  jest-puppeteer.config.js  jest.e2e.config.json  package-lock.json  package.json  stryker.conf.js  templates.js  test-preprocessor.js  test-setup.js  test-shim.js  tsconfig.json  tsconfig.test.json  tslint.json  webpack.config.js
.github/: PULL_REQUEST_TEMPLATE
coverage/: clover.xml  coverage-final.json  lcov.info
coverage/lcov-report/: index.html
docs/: notes.md
fonts/: octicons.css  roboto.css  seti-extra.css  seti.css  zilla.css
lib/: base64js.min.js  binaryen.assemblyscript.js  binaryen.js  capstone.x86.min.js  clang-format.js  clang-format.wasm  fiddle.d.ts  ga.js  lib.es6.d.ts  libwabt.js  showdown.min.js  twiggy_wasm_api.js  twiggy_wasm_api_bg.wasm  vendor_libs.sh  viz-lite.js  wabt.js
lib/monaco-editor/: monaco.d.ts  package.json
notes/: help.md  notes.md
src/: arc.ts  config.ts  dispatcher.ts  errors.ts  globals.js  globals.ts  gulpy.ts  index.tsx  message.ts  model.ts  monaco-controller.ts  monaco-dnd.ts  monaco-extra.ts  monaco-utils.ts  project.ts  service.ts  util.ts  worker.ts
src/languages/rust-analyzer/: Cargo.toml
src/languages/rust-analyzer/src/: conv.rs  lib.rs  return_types.rs
style/: botui-theme-default.css  botui.min.css  flow.css  global.css  markdown.css  rightpanel.css  split-pane.css  theme.css
svg/: favicon.psd
templates/: templates.js
(+425 files in other folders)
