[package]
name = "rust-analyzer-wasm"
version = "0.1.0"
authors = ["rust-analyzer developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
dev = ["console_log", "console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
console_log = { version = "0.1", optional = true }
log = { version = "0.4", features = ["release_max_level_warn"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde-wasm-bindgen = "0.1"
stacker = "= 0.1.5" # last known working version, 0.1.6 breaks wasm support
wasm-bindgen = "0.2.55"

ra_ide = { git = "https://github.com/rust-analyzer/rust-analyzer", features = ["wasm"] }
ra_syntax =  { git = "https://github.com/rust-analyzer/rust-analyzer" }
ra_text_edit =  { git = "https://github.com/rust-analyzer/rust-analyzer" }
